*SVN*

* Fixed that MemCacheStore wasn't included by default and added default MemCache object pointing to localhost #447 [Lucas Carlson]

* Added fourth argument to render_collection_of_partials that allows you to specify local_assigns -- just like render_partial #432 [zenspider]

* Fixed that host would choke when cgi.host returned nil #432 [Tobias Luetke]

* Added that form helpers now take an index option #448 [Tim Bates]

  Example:
    text_field "person", "name", "index" => 3

  Becomes:
    <input type="text" name="person[3][name]" id="person_3_name" value="<%= @person.name %>" />

* Fixed three issues with retrying breakpoints #417 [Florian Gross]

  1. Don't screw up pages that use multiple values for the same parameter (?foo=bar&foo=qux was converted to ?foo=barqux) 
  2. Don't screw up all forms when you click the "Retry with Breakpoint" link multiple times instead of reloading 
     (This caused the parameters to be added multiple times for GET forms leading to trouble.) 
  3. Don't add ?BP-RETRY=1 multiple times

* Added that all renders and redirects now return false, so they can be used as the last line in before_filters to stop execution.

  Before:
    def authenticate
      unless @session[:authenticated]
        redirect_to :controller => "account", :action => "login"
        return false
      end
    end
  
  After:
    def authenticate
      redirect_to(:controller => "account", :action => "login") unless @session[:authenticated]
    end

* Added conditional filters #431 [Marcel]. Example:

    class JournalController < ActionController::Base
      # only require authentication if the current action is edit or delete
      before_filter :authorize, :only_on => [ :edit, :delete ]
    
      private
        def authorize
          # redirect to login unless authenticated
        end
    end

* Added Base#render_nothing as a cleaner way of doing render_text "" when you're not interested in returning anything but an empty response.
